# commonroad_dataset_converters

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
commonroad_dataset_converter/: helper.py  main.py  planning_problem_utils.py
commonroad_dataset_converter/INTERACTION/: create_gifs.py  fix_lane_waypoints_order.py  interaction_to_cr.py  translate_maps.py
commonroad_dataset_converter/conversion/: factory.py  interface.py
commonroad_dataset_converter/exiD/: config.yaml  exiD_to_cr.py  map_utils.py  obstacle_utils.py
commonroad_dataset_converter/highD/: config.yaml  fix_obstacle_positions.py  highd_to_cr.py  map_utils.py  obstacle_utils.py
commonroad_dataset_converter/inD/: ind_to_cr.py  map_utils.py  obstacle_utils.py  trajectory_classification.py
commonroad_dataset_converter/mona/: config.yaml  mona_to_cr.py  mona_utils.py
commonroad_dataset_converter/rounD/: config.yaml  map_utils.py  obstacle_utils.py  round_to_cr.py  trajectory_classification.py
commonroad_dataset_converter/sind/: CHN_SinD-1.xml  config.yaml  sind_utils.py
commonroad_dataset_converter/tests/: test_INTERACTION.py  test_highD.py  test_inD.py
doc/: class_architecture.puml  conf.py  index.rst  overview.rst
doc/_plantuml/: producer_consumer.puml  tabular_api.puml
doc/api/: factory.rst  index.rst  producer_consumer.rst  tabular.rst
doc/examples/: highd_ttc.rst
examples/: highd_ttc.py
potential/pneuma/: url.txt
scripts/: convert_interaction_base_maps.py  repair_maps.py
src/: helper.py  main.py  planning_problem_utils.py
src/INTERACTION/: README.md  config.py  config.yaml  converter.py  converter_INTERACTION.py  create_gifs.py  fix_lane_waypoints_order.py  interaction_to_cr.py  map_utils.py  obstacle_utils.py  python.py  transformation_script.sh  translate_maps.py  utils.py
src/WaymoOpen/: testing.ipynb
src/highD/: config.yaml  fix_obstacle_positions.py  highd_to_cr.py  map_utils.py  obstacle_utils.py
src/inD/: README.md  XML_commonRoad_XSD_2020a.xsd  config.yaml  convert_all.sh  convert_osm.sh  ind_to_cr.py  map_utils.py  obstacle_utils.py  requirements.txt  trajectory_classification.py  validate_cr.py  visualize_cr.py
src/tests/: test_INTERACTION.py  test_highD.py  test_inD.py
tests/: test_INTERACTION.py  test_exiD.py  test_highD.py  test_inD.py  test_mona.py  test_rounD.py  test_sind.py
(+267 files in other folders)
